@@ -1,5 +1,6 @@
 2.21.4
  - fix: incorrect path list check when loading broken dataset
+ - fix: duplicate filters via block matrix results in AttributeError (#184)
 2.21.3
  - enh: support displaying unnamed table data
  - setup: bump dclab to 0.62.11
